[package]
name = "axum-proxy"
version = "0.3.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["Kristof Mattei", "Masato Nakata <masaton@naughie.com>"]
description = "Tower service for reverse proxy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kristof-mattei/axum-proxy"
documentation = "https://docs.rs/axum-proxy"
keywords = ["http", "tower", "axum", "reverse", "proxy"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
readme = "README.md"
include = ["src/", "LICENSE-*", "README.md"]

[lints.clippy]
# don't stop from compiling / running
all = "warn"
pedantic = "warn"
cargo = "warn"
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[features]
default = ["http1"]
http1 = ["hyper/http1", "hyper-util/http1"]
http2 = ["hyper/http2", "hyper-util/http2"]
https = ["nativetls"]
nativetls = ["hyper-tls"]
rustls = ["rustls-webpki-roots"]
rustls-http2 = ["http2", "rustls", "hyper-rustls/http2"]
rustls-native-roots = ["__rustls", "hyper-rustls/rustls-native-certs"]
rustls-webpki-roots = ["__rustls", "hyper-rustls/webpki-roots"]
rustls-ring = ["__rustls", "hyper-rustls/ring"]
rustls-aws-lc = ["__rustls", "hyper-rustls/aws-lc-rs"]

__rustls = ["hyper-rustls"]

[dependencies]
tower-service = "0.3"
http = "1.2.0"
http-body = "1.0.1"
hyper = { version = "1.5.2", features = ["client"] }

axum = { version = "0.8.1", features = [], optional = true }

hyper-tls = { version = "0.6.0", optional = true }
hyper-rustls = { version = "0.27.5", optional = true, default-features = false, features = [
    "http1",
    "logging",
    "native-tokio",
    "tls12",
] }

regex = "1.8"
log = "0.4.25"
hyper-util = { version = "0.1.10", features = [
    "client",
    "client-legacy",
    "tokio",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockito = "1.6.1"
http-body-util = "0.1.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
